--- a/Dataway.MvcLibrary.csproj
+++ b/Dataway.MvcLibrary.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Helpers\FormCollectionExtensions.cs" />
     <Compile Include="Helpers\HtmlHelperExtensions.cs" />
     <Compile Include="Helpers\StringHelperExtensions.cs" />
+    <Compile Include="Helpers\UrlHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\ValidationViewModel.cs" />
   </ItemGroup>
